welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {def faireV(c:Color) { avance()
setCouleurBrosse(cw);marquersol()
gauche()
avance()
droite()
avance()
setCouleurBrosse(c);marquersol()
avance()
droite()
avance();setCouleurBrosse(c);marquersol
gauche()
avance()

gauche()
}
def marquersol() {baisseBrosse();leveBrosse()}

def petitcar() {
for (i <- 1 to 4) {
faireV(Color.yellow)}
               }

def dephaut() {gauche()
for (i<- 1 to 5){avance()};droite()} 
def col() { 
for (a <- 1 to 3) {petitcar();dephaut()} 
          }
def mono2() {
for (b <- 1 to 3) { col()
for (c <- 1 to 5) {avance()}
	
                   }
            }
mono2()

}
